Added Stephen's bio (no photo)

--- a/ieee_spm/adjoints_in_gradients.tex
+++ b/ieee_spm/adjoints_in_gradients.tex
@@ -358,8 +358,8 @@ Another interesting adjoint appears in a blind channel estimation optimization p
 \end{IEEEbiographynophoto}
 
 % if you will not have a photo at all:
-\begin{IEEEbiographynophoto}{Stephen Becker}
-Biography text here.
+\begin{IEEEbiographynophoto}{Stephen Becker} is an assistant professor in the department of Applied Mathematics at  the University of Colorado at Boulder. He was the recipient of a postdoctoral fellowship to study at Paris 6, and the Goldstine postdoctoral fellowship at IBM Research. He completed his PhD in 2011 in Applied and Computational Mathematics from the California Institute of Technology, and his bachelors in Mathematics and Physics from Wesleyan University. His work on the TFOCS algorithm won the triennial Beale-Orchard-Hays Prize from the Mathematical Optimization Society.
+   His current research is centered around deriving efficient optimization methods for large-scale data analysis, with emphasis on techniques for sparse and low-rank models.
 \end{IEEEbiographynophoto}
 
 \end{document}
